[package]
name = "ttoj"
version = "0.1.0"
authors = ["tehAnswer <sergiorodriguezgijon@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Background jobs."
repository = "https://github.com/tehAnswer/ttoj"
readme = "README.md"

[dependencies]
redis = "0.10.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
chrono = { version= "0.4", features = ["serde"] }
uuid = { version = "0.7", features = ["serde", "v4"] }
